fix navigation mobile

--- a/styles/_navigation.sass
+++ b/styles/_navigation.sass
@@ -36,12 +36,12 @@
   background: url("data:image/pngbase64,iVBORw0KGgoAAAANSUhEUgAAABIAAAAMCAMAAABYzB2OAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAAlQTFRFAAAA/+MB6QIIKrGZ+QAAABhJREFUeNpiYKAiYMIA5AsxYgCyhQACDABLtADZltovkgAAAABJRU5ErkJggg==") no-repeat center
 
 @media screen and (max-width: $breakpoint-m)
-  .split #navbar
+  #navbar
     position: absolute
     top: 63%
     left: 0
     right: 0
-    z-index: 100
+    z-index: 600
     height: 40px
     text-align: center
 
@@ -88,7 +88,7 @@
     top: 62%
     width: 100%
     height: 40px
-    z-index: 100
+    z-index: 600
 
     &.hide
       position: fixed
